feat: Introduce DomainConfig and DomainConfigDeserializer classes, update gateway domain handling to use DomainResult
Change-Id: Ib2be325df338d9bc9bad2604707b60e710b9fd83